// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmartLink Snapshots with an external link matches snapshot 1`] = `
<div>
  <!---->
   
  <a
    href="http://google.com"
    target="_blank"
  />
</div>
`;

exports[`SmartLink Snapshots with an internal link matches snapshot 1`] = `
<div>
  <router-link-stub
    to="test"
  />
   
  <!---->
</div>
`;
